# Volumio2-UI-for-lcd-pannel

./: .env-example  .gitignore  CLAUDE.md  DEVELOPMENT.md  E2E-TEST-ISSUES.md  MIGRATION_PLAN.md  README.md  SUMMARY.md  TODO.md  deploy.sh  index.html  package-lock.json  package.json  playwright.config.ts  run_claude.sh  switch-kiosk.sh  tsconfig.json  vite.config.ts  vitest-setup.ts  vitest.config.ts
deploy/: stellar.service
docs/: AUDIRVANA_INVESTIGATION.md  BIT-PERFECT-AUDIO.md  LIBRARY-CACHE-DESIGN.md  REFERENCES.md  STATE-MACHINE-ISSUES.md  performance-overlay.md  performance-test-results.md
e2e/: artists-page.spec.ts  audio-output-v2.spec.ts  audio-output.spec.ts  browse.spec.ts  debug.spec.ts  library.spec.ts  modals.spec.ts  player.spec.ts  settings-nas-c7-reopen.spec.ts  settings-nas.spec.ts  settings-v2.spec.ts  status-bar.spec.ts  toast.spec.ts  vu-meter.spec.ts
pi-kiosk/: README.md  install.sh  lcd-control-service.js  lcd-control.service  lcd_off  lcd_on  mount-control-service.js  stellar-mount-control.service
public/: config.json.example
scripts/: deploy-to-pi.sh  deploy.sh  install-lcd-control.sh  install-mount-control.sh  smoke-mount-control-info.sh  uninstall-lcd-control.sh
src/: App.svelte  app.css  globals.d.ts  (+1 more)
src/lib/wasm/stellar-viz/: Cargo.toml  README.md  build.sh
src/lib/wasm/stellar-viz/benches/: viz_benchmark.rs
src/lib/wasm/stellar-viz/src/: color.rs  lib.rs  noise.rs  physics.rs  radial.rs  spectrum.rs  waveform.rs
src/lib/wasm/stellar-viz/tests/: integration_tests.rs  physics_tests.rs  spectrum_tests.rs  waveform_tests.rs
(+430 files in other folders)
