[package]
name = "stellar-viz"
version = "0.1.0"
edition = "2021"
description = "High-performance WASM visualisation computations for Stellar LCD display (1920×440)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
wasm-bindgen-test = "0.3"

[[bench]]
name = "viz_benchmark"
harness = false

[profile.release]
opt-level = "s"
lto = true
